creusot/tests/should_fail/prusti/deref/expired_old.stderr
error: `&'post u32` cannot be moved from `'pre` to `'a` since it doesn't live long enough
       `'post` doesn't outlive `'a`
 --> expired_old.rs:4:21
  |
4 | #[after_expiry('a, *old(x) == 0u32)]
  |                     ^^^^^^

error: aborting due to 1 previous error

